[package]
name = "cyclonedds-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
thiserror = "2.0.11"
cyclonedds-sys = { path = "../cyclonedds-sys" }
either = "1.14.0"
bincode = "1.3.3"
cdr-encoding = "0.10.2"

[dev-dependencies]
serde = {version = "1.0.217",features = ["derive"] }
